[package]
name = "ndarray-tensorflow"
version = "0.2.0"
authors = ["Daniël de Kok <me@danieldk.eu>"]
description = "Adapter for Tensorflow tensors to expose the ndarray API"
license = "Apache-2.0"
keywords = ["TensorFlow", "ndarray"]
readme = "README.md"
documentation = "https://docs.rs/ndarray-tensorflow/"
homepage = "https://github.com/danieldk/ndarray-tensorflow"
repository = "https://github.com/danieldk/ndarray-tensorflow.git"
edition = "2018"
exclude = [
  ".envrc",
  ".gitignore",
  ".travis.yml",
  "default.nix"
]

[dependencies]
ndarray = "0.12"
tensorflow = "0.13"
